--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>ohmyfood</title>
+    <script src="https://kit.fontawesome.com/d6d76bda22.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <header>
+        <i class="fa-solid fa-arrow-left"></i>
+        <img src="./images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
+    </header>
     
 </body>
 </html>
