--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 
+    <!-- Header logo all pages-->
     <header>
         <i class="fa-solid fa-arrow-left"></i>
         <img src="./images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
@@ -17,6 +18,7 @@
 
     <main>
 
+        <!-- Section 1 search bar -->
         <section>
             <h1>ohmyfood</h1>
             <form method="post" action="traitement.php">
@@ -25,12 +27,14 @@
             </form>
         </section>
 
+        <!-- Section 2 Presentation & restaurant search -->
         <section>
             <h2>Réservez le menu qui vous convient</h2>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
             <button type="submit">Explorez nos restaurants</button>
         </section>
 
+        <!-- Section 3 Fonctionning tools -->
         <section>
             <h3>Fonctionnement</h3>
             <ol>
@@ -54,7 +58,91 @@
                 </li>
             </ol>
         </section>
+
+        <!-- Section 4 Restaurants cards -->
+        <section>
+            <h3>Restaurants</h3>
+            <!-- Card 1 -->
+            <article>
+                <!-- Top right label -->
+                <div>
+                    <p>Nouveau</p>
+                </div>
+                <!-- Card img -->
+                <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant la palette du goût">
+                <!-- Card Txt -->
+                <div>
+                    <div>
+                        <h4>La palette du goût</h4>
+                        <p>Ménilmontant</p>
+                    </div>
+                    <div>
+                        <i class="fa-light fa-heart"></i>
+                    </div>
+                </div>
+            </article>
+            <!-- Card 2 -->
+            <article>
+                <!-- Top right label -->
+                <div>
+                    <p>Nouveau</p>
+                </div>
+                <!-- Card img -->
+                <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée">
+                <!-- Card Txt -->
+                <div>
+                    <div>
+                        <h4>La note enchantée</h4>
+                        <p>Charonne</p>
+                    </div>
+                    <div>
+                        <i class="fa-light fa-heart"></i>
+                    </div>
+                </div>
+            </article>
+            <!-- Card 3 -->
+            <article>
+                <!-- Card img -->
+                <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant à la française">
+                <!-- Card Txt -->
+                <div>
+                    <div>
+                        <h4>À la française</h4>
+                        <p>Cité Rouge</p>
+                    </div>
+                    <div>
+                        <i class="fa-light fa-heart"></i>
+                    </div>
+                </div>
+            </article>
+            <!-- Card 4 -->
+            <article>
+                <!-- Card img -->
+                <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant le délice des sens">
+                <!-- Card Txt -->
+                <div>
+                    <div>
+                        <h4>Le délice des sens</h4>
+                        <p>Folie-Méricourt</p>
+                    </div>
+                    <div>
+                        <i class="fa-light fa-heart"></i>
+                    </div>
+                </div>
+            </article>
+        </section>
     </main>
+
+    <!-- Footer all pages -->
+    <footer>
+        <img src="./images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
+        <ul>
+            <li><i class="fa-solid fa-utensils"></i> Proposer un restaurant</li>
+            <li><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</li>
+            <li>Mentions légales</li>
+            <li>Contact</li>
+        </ul>
+    </footer>
 
 </body>
 </html>
