Adding restaurants pages & links

--- a/index.html
+++ b/index.html
@@ -64,71 +64,79 @@
             <h3>Restaurants</h3>
             <!-- Card 1 -->
             <article>
-                <!-- Top right label -->
-                <div>
-                    <p>Nouveau</p>
-                </div>
-                <!-- Card img -->
-                <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant la palette du goût">
-                <!-- Card Txt -->
-                <div>
+                <a href="lapalettedugout.html">
+                    <!-- Top right label -->
                     <div>
-                        <h4>La palette du goût</h4>
-                        <p>Ménilmontant</p>
+                        <p>Nouveau</p>
                     </div>
+                    <!-- Card img -->
+                    <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant la palette du goût">
+                    <!-- Card Txt -->
                     <div>
-                        <i class="fa-light fa-heart"></i>
+                        <div>
+                            <h4>La palette du goût</h4>
+                            <p>Ménilmontant</p>
+                        </div>
+                        <div>
+                            <i class="fa-light fa-heart"></i>
+                        </div>
                     </div>
-                </div>
+                </a>
             </article>
             <!-- Card 2 -->
             <article>
-                <!-- Top right label -->
-                <div>
-                    <p>Nouveau</p>
-                </div>
-                <!-- Card img -->
-                <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée">
-                <!-- Card Txt -->
-                <div>
+                <a href="lanoteenchantee.html">
+                    <!-- Top right label -->
                     <div>
-                        <h4>La note enchantée</h4>
-                        <p>Charonne</p>
+                        <p>Nouveau</p>
                     </div>
+                    <!-- Card img -->
+                    <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée">
+                    <!-- Card Txt -->
                     <div>
-                        <i class="fa-light fa-heart"></i>
+                        <div>
+                            <h4>La note enchantée</h4>
+                            <p>Charonne</p>
+                        </div>
+                        <div>
+                            <i class="fa-light fa-heart"></i>
+                        </div>
                     </div>
-                </div>
+                </a>
             </article>
             <!-- Card 3 -->
             <article>
-                <!-- Card img -->
-                <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant à la française">
-                <!-- Card Txt -->
-                <div>
+                <a href="alafrancaise.html">
+                    <!-- Card img -->
+                    <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant à la française">
+                    <!-- Card Txt -->
                     <div>
-                        <h4>À la française</h4>
-                        <p>Cité Rouge</p>
+                        <div>
+                            <h4>À la française</h4>
+                            <p>Cité Rouge</p>
+                        </div>
+                        <div>
+                            <i class="fa-light fa-heart"></i>
+                        </div>
                     </div>
-                    <div>
-                        <i class="fa-light fa-heart"></i>
-                    </div>
-                </div>
+                </a>
             </article>
             <!-- Card 4 -->
             <article>
-                <!-- Card img -->
-                <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant le délice des sens">
-                <!-- Card Txt -->
-                <div>
+                <a href="ledelicedessens.html">
+                    <!-- Card img -->
+                    <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant le délice des sens">
+                    <!-- Card Txt -->
                     <div>
-                        <h4>Le délice des sens</h4>
-                        <p>Folie-Méricourt</p>
+                        <div>
+                            <h4>Le délice des sens</h4>
+                            <p>Folie-Méricourt</p>
+                        </div>
+                        <div>
+                            <i class="fa-light fa-heart"></i>
+                        </div>
                     </div>
-                    <div>
-                        <i class="fa-light fa-heart"></i>
-                    </div>
-                </div>
+                </a>
             </article>
         </section>
     </main>
