--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -18,6 +18,89 @@
 
     <main>
 
+        <article>
+            <div>
+                <h1>À la française</h1>
+                <i class="fa-light fa-heart"></i>
+            </div>
+            <section>
+                <h2>entrées</h2>
+                <div>
+                    <div>
+                        <h3>Tartare de poulpe acidulé</h3>
+                        <p>Aux zestes d'orange</p>
+                    </div>
+                    <p>25€</p>
+                </div>
+                <div>
+                    <div>
+                        <h3>Velouté de légumes d'antan</h3>
+                        <p>Carotte, panais, topinambour</p>
+                    </div>
+                    <p>35€</p>
+                </div>
+                <div>
+                    <div>
+                        <h3>Soupe à l'oignon</h3>
+                        <p>Revisitée</p>
+                    </div>
+                    <p>20€</p>
+                </div>
+            </section>
+            <section>
+                <h2>plats</h2>
+                <div>
+                    <div>
+                        <h3>Coquilles Saint-Jacques</h3>
+                        <p>Accompagnées d'une purée de panais</p>
+                    </div>
+                    <p>40€</p>
+                </div>
+                <div>
+                    <div>
+                        <h3>Magret de canard</h3>
+                        <p>Et parmentier de pommes de terre</p>
+                    </div>
+                    <p>35€</p>
+                </div>
+                <div>
+                    <div>
+                        <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                        <p>Sur son lit de gnocchis aux légumes</p>
+                    </div>
+                    <p>44€</p>
+                </div>
+            </section>
+            <section>
+                <h2>desserts</h2>
+                <div>
+                    <div>
+                        <h3>Pétales de violettes glacés</h3>
+                        <p>Et purée de noisettes</p>
+                    </div>
+                    <p>18€</p>
+                </div>
+                <div>
+                    <div>
+                        <h3>Fondant au chocolat</h3>
+                        <p>Revisité</p>
+                    </div>
+                    <p>35€</p>
+                </div>
+                <div>
+                    <div>
+                        <h3>Millefeuille croustillant</h3>
+                        <p>Myrtilles et pâte d’amande</p>
+                    </div>
+                    <p>23€</p>
+                </div>
+            </section>
+        </article>
+
+        <aside>
+            <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant la palette du goût">
+        </aside>
+
     </main>
     
     <!-- Footer all pages -->
