--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>ohmyfood</title>
     <script src="https://kit.fontawesome.com/d6d76bda22.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>ohmyfood</title>
 </head>
 <body>
 
@@ -19,13 +22,12 @@
     <main>
 
         <!-- Section 1 search bar -->
-        <section>
-            <h1>ohmyfood</h1>
+        <div>
             <form method="post" action="traitement.php">
                 <label for="search"><i class="fa-solid fa-location-dot"></i></label>
                 <input type="text" name="recherche" id="search" placeholder="Paris, Belleville">
             </form>
-        </section>
+        </div>
 
         <!-- Section 2 Presentation & restaurant search -->
         <section>
