FontA issue fixed & header

--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
 
     <!-- Header logo all pages-->
     <header>
-        <i class="fa-solid fa-arrow-left"></i>
+        <a href="index.html">
+            <i class="fas fa-arrow-left arrow-display"></i>
+        </a>
         <img src="./images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
     </header>
 
     <main>
 
         <!-- Section 1 search bar -->
-        <div>
+        <div class="section-1_search">
+            <i class="fas fa-map-marker-alt"></i>
             <form method="post" action="traitement.php">
-                <label for="search"><i class="fa-solid fa-location-dot"></i></label>
+                <label for="search"></label>
                 <input type="text" name="recherche" id="search" placeholder="Paris, Belleville">
             </form>
         </div>
@@ -43,19 +46,19 @@
             <ol>
                 <li>
                     <button type="submit">
-                        <i class="fa-solid fa-mobile-screen-button"></i>
+                        <i class="fas fa-mobile-alt"></i>
                         Choisissez un restaurant
                     </button>
                 </li>
                 <li>
                     <button type="submit">
-                        <i class="fa-solid fa-list"></i>
+                        <i class="fas fa-list-ul"></i>
                         Composez votre menu
                     </button>
                 </li>
                 <li>
                     <button type="submit">
-                        <i class="fa-solid fa-store"></i>
+                        <i class="fas fa-store"></i>
                         Dégustez au restaurant
                     </button>
                 </li>
@@ -81,7 +84,7 @@
                             <p>Ménilmontant</p>
                         </div>
                         <div>
-                            <i class="fa-light fa-heart"></i>
+                            <i class="far fa-heart"></i>
                         </div>
                     </div>
                 </a>
@@ -102,7 +105,7 @@
                             <p>Charonne</p>
                         </div>
                         <div>
-                            <i class="fa-light fa-heart"></i>
+                            <i class="far fa-heart"></i>
                         </div>
                     </div>
                 </a>
@@ -119,7 +122,7 @@
                             <p>Cité Rouge</p>
                         </div>
                         <div>
-                            <i class="fa-light fa-heart"></i>
+                            <i class="far fa-heart"></i>
                         </div>
                     </div>
                 </a>
@@ -136,7 +139,7 @@
                             <p>Folie-Méricourt</p>
                         </div>
                         <div>
-                            <i class="fa-light fa-heart"></i>
+                            <i class="far fa-heart"></i>
                         </div>
                     </div>
                 </a>
@@ -148,8 +151,8 @@
     <footer>
         <img src="./images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
         <ul>
-            <li><i class="fa-solid fa-utensils"></i> Proposer un restaurant</li>
-            <li><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</li>
+            <li><i class="fas fa-utensils"></i> Proposer un restaurant</li>
+            <li><i class="fas fa-hands-helping"></i> Devenir partenaire</li>
             <li>Mentions légales</li>
             <li>Contact</li>
         </ul>
