--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -9,18 +9,21 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/normalize.css">
         <title>ohmyfood</title>
     </head>    
 <body>
 
     <!-- Header logo all pages-->
     <header>
-        <i class="fa-solid fa-arrow-left"></i>
+        <a href="index.html">
+            <i class="fas fa-arrow-left"></i>
+        </a>
         <img src="./images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
     </header>
 
     <main>
-
+        
         <article>
             <div>
                 <h1>À la française</h1>
