Adding section-2 & mixins

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
     <main>
 
         <!-- Section 1 search bar -->
-        <div class="section-1_search">
-            <i class="fas fa-map-marker-alt"></i>
+        <div class="section-1">
             <form method="post" action="traitement.php">
                 <label for="search"></label>
+                <i class="fas fa-map-marker-alt"></i>
                 <input type="text" name="recherche" id="search" placeholder="Paris, Belleville">
             </form>
         </div>
 
         <!-- Section 2 Presentation & restaurant search -->
-        <section>
+        <section class="section-2"> 
             <h2>Réservez le menu qui vous convient</h2>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
             <button type="submit">Explorez nos restaurants</button>
