--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         </section>
 
         <!-- Section 3 Fonctionning tools -->
-        <section>
+        <section class="section-3">
             <h3>Fonctionnement</h3>
-            <ol>
+            <ul class="numbered-list">
                 <li>
                     <button type="submit">
                         <i class="fas fa-mobile-alt"></i>
@@ -62,7 +62,7 @@
                         Dégustez au restaurant
                     </button>
                 </li>
-            </ol>
+            </ul>
         </section>
 
         <!-- Section 4 Restaurants cards -->
