--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
         </section>
 
         <!-- Section 4 Restaurants cards -->
-        <section>
+        <section class="section-4">
             <h3>Restaurants</h3>
             <!-- Card 1 -->
-            <article>
+            <article class="cards">
                 <a href="lapalettedugout.html">
                     <!-- Top right label -->
-                    <div>
+                    <div class="new-tag">
                         <p>Nouveau</p>
                     </div>
                     <!-- Card img -->
                     <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant la palette du goût">
                     <!-- Card Txt -->
-                    <div>
+                    <div class="cards__text">
                         <div>
                             <h4>La palette du goût</h4>
                             <p>Ménilmontant</p>
@@ -90,16 +90,16 @@
                 </a>
             </article>
             <!-- Card 2 -->
-            <article>
+            <article class="cards">
                 <a href="lanoteenchantee.html">
                     <!-- Top right label -->
-                    <div>
+                    <div class="new-tag">
                         <p>Nouveau</p>
                     </div>
                     <!-- Card img -->
                     <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée">
                     <!-- Card Txt -->
-                    <div>
+                    <div class="cards__text">
                         <div>
                             <h4>La note enchantée</h4>
                             <p>Charonne</p>
@@ -111,12 +111,12 @@
                 </a>
             </article>
             <!-- Card 3 -->
-            <article>
+            <article class="cards">
                 <a href="alafrancaise.html">
                     <!-- Card img -->
                     <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant à la française">
                     <!-- Card Txt -->
-                    <div>
+                    <div class="cards__text">
                         <div>
                             <h4>À la française</h4>
                             <p>Cité Rouge</p>
@@ -128,12 +128,12 @@
                 </a>
             </article>
             <!-- Card 4 -->
-            <article>
+            <article class="cards">
                 <a href="ledelicedessens.html">
                     <!-- Card img -->
                     <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant le délice des sens">
                     <!-- Card Txt -->
-                    <div>
+                    <div class="cards__text">
                         <div>
                             <h4>Le délice des sens</h4>
                             <p>Folie-Méricourt</p>
