--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -22,33 +22,33 @@
         <img src="./images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
     </header>
 
-    <main>
+    <main class="main_lapalettedugout">
         
         <article>
-            <div>
-                <h1>À la française</h1>
-                <i class="fa-light fa-heart"></i>
+            <div class="title-restaurant-page">
+                <h1>La palette du goût</h1>
+                <i class="far fa-heart"></i>
             </div>
             <section>
                 <h2>entrées</h2>
                 <div>
                     <div>
-                        <h3>Tartare de poulpe acidulé</h3>
-                        <p>Aux zestes d'orange</p>
+                        <h3>Fricassée d'escargot</h3>
+                        <p>Au piment d'Espelette </p>
                     </div>
                     <p>25€</p>
                 </div>
                 <div>
                     <div>
-                        <h3>Velouté de légumes d'antan</h3>
-                        <p>Carotte, panais, topinambour</p>
+                        <h3>Foie gras de canard mi-cuit</h3>
+                        <p>Et ses copeaux de truffe noire</p>
                     </div>
                     <p>35€</p>
                 </div>
                 <div>
                     <div>
-                        <h3>Soupe à l'oignon</h3>
-                        <p>Revisitée</p>
+                        <h3>Oeuf au plat</h3>
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
                     </div>
                     <p>20€</p>
                 </div>
@@ -57,22 +57,22 @@
                 <h2>plats</h2>
                 <div>
                     <div>
-                        <h3>Coquilles Saint-Jacques</h3>
-                        <p>Accompagnées d'une purée de panais</p>
+                        <h3>Filet de boeuf aux herbes</h3>
+                        <p>Accompagné de sa ribambelle de légumes</p>
                     </div>
                     <p>40€</p>
                 </div>
                 <div>
                     <div>
-                        <h3>Magret de canard</h3>
-                        <p>Et parmentier de pommes de terre</p>
+                        <h3>Parmentier de queue de boeuf</h3>
+                        <p>À la truffe noire sur sa purée de panais</p>
                     </div>
                     <p>35€</p>
                 </div>
                 <div>
                     <div>
-                        <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <h3>Filet de turbot</h3>
+                        <p>Aux agrumes</p>
                     </div>
                     <p>44€</p>
                 </div>
@@ -81,22 +81,22 @@
                 <h2>desserts</h2>
                 <div>
                     <div>
-                        <h3>Pétales de violettes glacés</h3>
-                        <p>Et purée de noisettes</p>
+                        <h3>Paris-Brest</h3>
+                        <p>Revisité</p>
                     </div>
                     <p>18€</p>
                 </div>
                 <div>
                     <div>
-                        <h3>Fondant au chocolat</h3>
-                        <p>Revisité</p>
+                        <h3>Macaron au chocolat d'exception</h3>
+                        <p>Et glace à la vanille de Madagascar</p>
                     </div>
-                    <p>35€</p>
+                    <p>22€</p>
                 </div>
                 <div>
                     <div>
-                        <h3>Millefeuille croustillant</h3>
-                        <p>Myrtilles et pâte d’amande</p>
+                        <h3>Mousse au chocolat </h3>
+                        <p>Au piment d'Espelette et à la truffe noire</p>
                     </div>
                     <p>23€</p>
                 </div>
