--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <section class="section-4">
             <h3>Restaurants</h3>
             <!-- Card 1 -->
-            <article class="cards">
+            <div class="cards">
                 <a href="lapalettedugout.html">
                     <!-- Top right label -->
                     <div class="new-tag">
@@ -88,9 +88,9 @@
                         </div>
                     </div>
                 </a>
-            </article>
+            </div>
             <!-- Card 2 -->
-            <article class="cards">
+            <div class="cards">
                 <a href="lanoteenchantee.html">
                     <!-- Top right label -->
                     <div class="new-tag">
@@ -109,9 +109,9 @@
                         </div>
                     </div>
                 </a>
-            </article>
+            </div>
             <!-- Card 3 -->
-            <article class="cards">
+            <div class="cards">
                 <a href="alafrancaise.html">
                     <!-- Card img -->
                     <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant à la française">
@@ -126,9 +126,9 @@
                         </div>
                     </div>
                 </a>
-            </article>
+            </div>
             <!-- Card 4 -->
-            <article class="cards">
+            <div class="cards">
                 <a href="ledelicedessens.html">
                     <!-- Card img -->
                     <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant le délice des sens">
@@ -143,7 +143,7 @@
                         </div>
                     </div>
                 </a>
-            </article>
+            </div>
         </section>
     </main>
 
