--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -29,23 +29,24 @@
                 <h1>La palette du goût</h1>
                 <i class="far fa-heart"></i>
             </div>
-            <section>
+            <section class="menu">
                 <h2>entrées</h2>
-                <div>
+                <span>_______</span>
+                <div class="menu__dishcard">
                     <div>
                         <h3>Fricassée d'escargot</h3>
                         <p>Au piment d'Espelette </p>
                     </div>
                     <p>25€</p>
                 </div>
-                <div>
+                <div class="menu__dishcard">
                     <div>
                         <h3>Foie gras de canard mi-cuit</h3>
                         <p>Et ses copeaux de truffe noire</p>
                     </div>
                     <p>35€</p>
                 </div>
-                <div>
+                <div class="menu__dishcard">
                     <div>
                         <h3>Oeuf au plat</h3>
                         <p>Assaisonné à la truffe sur lit de caviar</p>
@@ -53,23 +54,24 @@
                     <p>20€</p>
                 </div>
             </section>
-            <section>
+            <section class="menu">
                 <h2>plats</h2>
-                <div>
+                <span>_______</span>
+                <div class="menu__dishcard">
                     <div>
                         <h3>Filet de boeuf aux herbes</h3>
                         <p>Accompagné de sa ribambelle de légumes</p>
                     </div>
                     <p>40€</p>
                 </div>
-                <div>
+                <div class="menu__dishcard">
                     <div>
                         <h3>Parmentier de queue de boeuf</h3>
                         <p>À la truffe noire sur sa purée de panais</p>
                     </div>
                     <p>35€</p>
                 </div>
-                <div>
+                <div class="menu__dishcard">
                     <div>
                         <h3>Filet de turbot</h3>
                         <p>Aux agrumes</p>
@@ -77,23 +79,24 @@
                     <p>44€</p>
                 </div>
             </section>
-            <section>
+            <section class="menu">
                 <h2>desserts</h2>
-                <div>
+                <span>_______</span>
+                <div class="menu__dishcard">
                     <div>
                         <h3>Paris-Brest</h3>
                         <p>Revisité</p>
                     </div>
                     <p>18€</p>
                 </div>
-                <div>
+                <div class="menu__dishcard">
                     <div>
                         <h3>Macaron au chocolat d'exception</h3>
                         <p>Et glace à la vanille de Madagascar</p>
                     </div>
                     <p>22€</p>
                 </div>
-                <div>
+                <div class="menu__dishcard">
                     <div>
                         <h3>Mousse au chocolat </h3>
                         <p>Au piment d'Espelette et à la truffe noire</p>
@@ -113,8 +116,8 @@
     <footer>
         <img src="./images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
         <ul>
-            <li><i class="fa-solid fa-utensils"></i> Proposer un restaurant</li>
-            <li><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</li>
+            <li><i class="fas fa-utensils"></i> Proposer un restaurant</li>
+            <li><i class="fas fa-hands-helping"></i> Devenir partenaire</li>
             <li>Mentions légales</li>
             <li>Contact</li>
         </ul>
