Adding missing button in restaurant page

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     <!-- Footer all pages -->
     <footer>
-        <img src="./images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
+        <p>ohmyfood</p>
         <ul>
             <li><i class="fas fa-utensils"></i> Proposer un restaurant</li>
             <li><i class="fas fa-hands-helping"></i> Devenir partenaire</li>
