--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -58,7 +58,7 @@
                 <h2>plats</h2>
                 <span>_______</span>
                 <div class="menu__dishcard">
-                    <div>
+                    <div class="dishcard-text">
                         <h3>Filet de boeuf aux herbes</h3>
                         <p>Accompagné de sa ribambelle de légumes</p>
                     </div>
@@ -104,6 +104,9 @@
                     <p>23€</p>
                 </div>
             </section>
+            <div class="button-restaurant">
+                <button type="submit">Commander</button>
+            </div>
         </article>
 
         <aside>
@@ -114,10 +117,10 @@
     
     <!-- Footer all pages -->
     <footer>
-        <img src="./images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
+        <p>ohmyfood</p>
         <ul>
-            <li><i class="fas fa-utensils"></i> Proposer un restaurant</li>
-            <li><i class="fas fa-hands-helping"></i> Devenir partenaire</li>
+            <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
+            <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
             <li>Mentions légales</li>
             <li>Contact</li>
         </ul>
