--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -33,21 +33,21 @@
                 <h2>entrées</h2>
                 <span>_______</span>
                 <div class="menu__dishcard">
-                    <div>
+                    <div class="dishcard-text">
                         <h3>Fricassée d'escargot</h3>
                         <p>Au piment d'Espelette </p>
                     </div>
                     <p>25€</p>
                 </div>
                 <div class="menu__dishcard">
-                    <div>
+                    <div class="dishcard-text">
                         <h3>Foie gras de canard mi-cuit</h3>
                         <p>Et ses copeaux de truffe noire</p>
                     </div>
                     <p>35€</p>
                 </div>
                 <div class="menu__dishcard">
-                    <div>
+                    <div class="dishcard-text">
                         <h3>Oeuf au plat</h3>
                         <p>Assaisonné à la truffe sur lit de caviar</p>
                     </div>
@@ -65,14 +65,14 @@
                     <p>40€</p>
                 </div>
                 <div class="menu__dishcard">
-                    <div>
+                    <div class="dishcard-text">
                         <h3>Parmentier de queue de boeuf</h3>
                         <p>À la truffe noire sur sa purée de panais</p>
                     </div>
                     <p>35€</p>
                 </div>
                 <div class="menu__dishcard">
-                    <div>
+                    <div class="dishcard-text">
                         <h3>Filet de turbot</h3>
                         <p>Aux agrumes</p>
                     </div>
@@ -83,21 +83,21 @@
                 <h2>desserts</h2>
                 <span>_______</span>
                 <div class="menu__dishcard">
-                    <div>
+                    <div class="dishcard-text">
                         <h3>Paris-Brest</h3>
                         <p>Revisité</p>
                     </div>
                     <p>18€</p>
                 </div>
                 <div class="menu__dishcard">
-                    <div>
+                    <div class="dishcard-text">
                         <h3>Macaron au chocolat d'exception</h3>
                         <p>Et glace à la vanille de Madagascar</p>
                     </div>
                     <p>22€</p>
                 </div>
                 <div class="menu__dishcard">
-                    <div>
+                    <div class="dishcard-text">
                         <h3>Mousse au chocolat </h3>
                         <p>Au piment d'Espelette et à la truffe noire</p>
                     </div>
