--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Header logo all pages-->
     <header>
         <a href="index.html">
-            <i class="fas fa-arrow-left arrow-display"></i>
+            <i class="fas fa-arrow-left display-none"></i>
         </a>
         <img src="./images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
     </header>
