--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -35,6 +35,9 @@
                     <div class="dishcard-text">
                         <h3>Fricassée d'escargot</h3>
                         <p>Au piment d'Espelette </p>
+                        <div class="dishcard-check">
+                            <i class="fas   fa-check"></i>
+                        </div>
                     </div>
                     <p>25€</p>
                 </div>
