Working hover dishes 1st effect

--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -35,11 +35,11 @@
                     <div class="dishcard-text">
                         <h3>Fricassée d'escargot</h3>
                         <p>Au piment d'Espelette </p>
-                        <div class="dishcard-check">
-                            <i class="fas fa-check"></i>
-                        </div>
                     </div>
                     <p>25€</p>
+                    <div class="dishcard-check">
+                        <i class="fas fa-check"></i>
+                    </div>
                 </div>
                 <div class="menu__dishcard">
                     <div class="dishcard-text">
@@ -47,6 +47,9 @@
                         <p>Et ses copeaux de truffe noire</p>
                     </div>
                     <p>35€</p>
+                    <div class="dishcard-check">
+                        <i class="fas fa-check"></i>
+                    </div>
                 </div>
                 <div class="menu__dishcard">
                     <div class="dishcard-text">
@@ -54,6 +57,9 @@
                         <p>Assaisonné à la truffe sur lit de caviar</p>
                     </div>
                     <p>20€</p>
+                    <div class="dishcard-check">
+                        <i class="fas fa-check"></i>
+                    </div>
                 </div>
             </section>
             <section class="menu">
@@ -64,6 +70,9 @@
                         <p>Accompagné de sa ribambelle de légumes</p>
                     </div>
                     <p>40€</p>
+                    <div class="dishcard-check">
+                        <i class="fas fa-check"></i>
+                    </div>
                 </div>
                 <div class="menu__dishcard">
                     <div class="dishcard-text">
@@ -71,6 +80,9 @@
                         <p>À la truffe noire sur sa purée de panais</p>
                     </div>
                     <p>35€</p>
+                    <div class="dishcard-check">
+                        <i class="fas fa-check"></i>
+                    </div>
                 </div>
                 <div class="menu__dishcard">
                     <div class="dishcard-text">
@@ -78,6 +90,9 @@
                         <p>Aux agrumes</p>
                     </div>
                     <p>44€</p>
+                    <div class="dishcard-check">
+                        <i class="fas fa-check"></i>
+                    </div>
                 </div>
             </section>
             <section class="menu">
@@ -88,6 +103,9 @@
                         <p>Revisité</p>
                     </div>
                     <p>18€</p>
+                    <div class="dishcard-check">
+                        <i class="fas fa-check"></i>
+                    </div>
                 </div>
                 <div class="menu__dishcard">
                     <div class="dishcard-text">
@@ -95,6 +113,9 @@
                         <p>Et glace à la vanille de Madagascar</p>
                     </div>
                     <p>22€</p>
+                    <div class="dishcard-check">
+                        <i class="fas fa-check"></i>
+                    </div>
                 </div>
                 <div class="menu__dishcard">
                     <div class="dishcard-text">
@@ -102,6 +123,9 @@
                         <p>Au piment d'Espelette et à la truffe noire</p>
                     </div>
                     <p>23€</p>
+                    <div class="dishcard-check">
+                        <i class="fas fa-check"></i>
+                    </div>
                 </div>
             </section>
             <div class="button-restaurant">
@@ -122,7 +146,7 @@
             <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
             <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
             <li>Mentions légales</li>
-            <li>Contact</li>
+            <li><a href="mailto:ohmyfood@ohmyfood.com">Contact</a></li>
         </ul>
     </footer>
 
