--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <li><i class="fas fa-utensils"></i> Proposer un restaurant</li>
             <li><i class="fas fa-hands-helping"></i> Devenir partenaire</li>
             <li>Mentions légales</li>
-            <li>Contact</li>
+            <li><a href="mailto:ohmyfood@ohmyfood.com">Contact</a></li>
         </ul>
     </footer>
 
