Dishes hover fixed + adding hearts hover

--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -38,31 +38,37 @@
                 <section class="menu">
                     <h2>entrées</h2>
                     <div class="menu__dishcard">
-                        <div class="dishcard-text">
-                            <h3>Fricassée d'escargot</h3>
-                            <p>Au piment d'Espelette </p>
+                        <div class="dishcard-text-all">
+                            <div class="dishcard-text">
+                                <h3>Fricassée d'escargot</h3>
+                                <p>Au piment d'Espelette </p>
+                            </div>
+                            <p>25€</p>
                         </div>
-                        <p>25€</p>
                         <div class="dishcard-check">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
                     <div class="menu__dishcard">
-                        <div class="dishcard-text">
-                            <h3>Foie gras de canard mi-cuit</h3>
-                            <p>Et ses copeaux de truffe noire</p>
+                        <div class="dishcard-text-all">
+                            <div class="dishcard-text">
+                                <h3>Foie gras de canard mi-cuit</h3>
+                                <p>Et ses copeaux de truffe noire</p>
+                            </div>
+                            <p>35€</p>    
                         </div>
-                        <p>35€</p>
                         <div class="dishcard-check">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
                     <div class="menu__dishcard">
-                        <div class="dishcard-text">
-                            <h3>Oeuf au plat</h3>
-                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                        <div class="dishcard-text-all">
+                            <div class="dishcard-text">
+                                <h3>Oeuf au plat</h3>
+                                <p>Assaisonné à la truffe sur lit de caviar</p>
+                            </div>
+                            <p>20€</p>    
                         </div>
-                        <p>20€</p>
                         <div class="dishcard-check">
                             <i class="fas fa-check"></i>
                         </div>
@@ -71,31 +77,37 @@
                 <section class="menu">
                     <h2>plats</h2>
                     <div class="menu__dishcard">
-                        <div class="dishcard-text">
-                            <h3>Filet de boeuf aux herbes</h3>
-                            <p>Accompagné de sa ribambelle de légumes</p>
+                        <div class="dishcard-text-all">
+                            <div class="dishcard-text">
+                                <h3>Filet de boeuf aux herbes</h3>
+                                <p>Accompagné de sa ribambelle de légumes</p>
+                            </div>
+                            <p>40€</p>
                         </div>
-                        <p>40€</p>
                         <div class="dishcard-check">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
                     <div class="menu__dishcard">
-                        <div class="dishcard-text">
-                            <h3>Parmentier de queue de boeuf</h3>
-                            <p>À la truffe noire sur sa purée de panais</p>
+                        <div class="dishcard-text-all">
+                            <div class="dishcard-text">
+                                <h3>Parmentier de queue de boeuf</h3>
+                                <p>À la truffe noire sur sa purée de panais</p>
+                            </div>
+                            <p>35€</p>
                         </div>
-                        <p>35€</p>
                         <div class="dishcard-check">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
                     <div class="menu__dishcard">
-                        <div class="dishcard-text">
-                            <h3>Filet de turbot</h3>
-                            <p>Aux agrumes</p>
+                        <div class="dishcard-text-all">
+                            <div class="dishcard-text">
+                                <h3>Filet de turbot</h3>
+                                <p>Aux agrumes</p>
+                            </div>
+                            <p>44€</p>
                         </div>
-                        <p>44€</p>
                         <div class="dishcard-check">
                             <i class="fas fa-check"></i>
                         </div>
@@ -104,31 +116,37 @@
                 <section class="menu">
                     <h2>desserts</h2>
                     <div class="menu__dishcard">
-                        <div class="dishcard-text">
-                            <h3>Paris-Brest</h3>
-                            <p>Revisité</p>
+                        <div class="dishcard-text-all">
+                            <div class="dishcard-text">
+                                <h3>Paris-Brest</h3>
+                                <p>Revisité</p>
+                            </div>
+                            <p>18€</p>
                         </div>
-                        <p>18€</p>
                         <div class="dishcard-check">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
                     <div class="menu__dishcard">
-                        <div class="dishcard-text">
-                            <h3>Macaron au chocolat d'exception</h3>
-                            <p>Et glace à la vanille de Madagascar</p>
+                        <div class="dishcard-text-all">
+                            <div class="dishcard-text">
+                                <h3>Macaron au chocolat d'exception</h3>
+                                <p>Et glace à la vanille de Madagascar</p>
+                            </div>
+                            <p>22€</p>
                         </div>
-                        <p>22€</p>
                         <div class="dishcard-check">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
                     <div class="menu__dishcard">
-                        <div class="dishcard-text">
-                            <h3>Mousse au chocolat </h3>
-                            <p>Au piment d'Espelette et à la truffe noire</p>
+                        <div class="dishcard-text-all">
+                            <div class="dishcard-text">
+                                <h3>Mousse au chocolat </h3>
+                                <p>Au piment d'Espelette et à la truffe noire</p>
+                            </div>
+                            <p>23€</p>
                         </div>
-                        <p>23€</p>
                         <div class="dishcard-check">
                             <i class="fas fa-check"></i>
                         </div>
