Fixing bugs & adding comments

--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
 </head>
 <body>
 
+    <!-- Loading spinner -->
     <div class="progress">
         <div class="progress__bar"></div>
     </div>
 
+    <!-- Page after loading spinner -->
     <div class="progress-after">
         
         <!-- Header logo all pages-->
         <header>
+            <!-- Left arrow invisible main page -->
             <a href="index.html">
                 <i class="fas fa-arrow-left display-none"></i>
             </a>
