--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -23,7 +23,7 @@
         <img src="./images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
     </header>
 
-    <main class="main_restaurants">
+    <main class="main-restaurants-pages">
         
         <article>
             <!-- Restaurant name title -->
